# omicron

./: .envrc  .git-blame-ignore-revs  .gitignore  .licenserc.yaml  2  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml-e  Cargo.toml.old  DESIGN.md  Dockerfile  MIGRATION_PROGRESS.md  README.adoc  README.md  README.txt  REVIEW_FINDINGS.md  TODO.adoc  api-manifest.toml  clippy.toml  cte.sql  demo-instance.sh  demo.sh  diesel.toml  env.sh  flake.nix  library-verification.toml  logs.sh  manifest.toml  notes.txt  package-manifest.toml  package-manifest.toml-e  read_only_disks.patch  run.sh  rust-toolchain.toml  rustfmt.toml  services.sql  signals.sh  todo-for-sled-agent.md  (+1 more)
api_identity/: Cargo.toml
api_identity/src/: lib.rs
bootstore/: Cargo.toml  README.adoc
bootstore/src/: coordinator.rs  db.rs  lib.rs  messages.rs  node.rs  peer.rs
bootstore/tests/: integration-proptest.rs  v0-fsm-proptest-initial-member.proptest-regressions  v0-fsm-proptest-initial-member.rs  v0-fsm-proptest-learner.rs  v0-fsm-proptest-rack-coordinator-init-success.rs  v0-fsm-proptest-rack-coordinator.rs  v0-fsm-proptest.proptest-regressions  v0-fsm-proptest.rs
certificates/: Cargo.toml
certificates/src/: lib.rs  openssl_ext.rs
clickhouse-admin/: Cargo.toml
clickhouse-admin/api/: Cargo.toml
clickhouse-admin/src/: clickhouse_cli.rs  clickward.rs  config.rs  context.rs  http_entrypoints.rs  lib.rs
clickhouse-admin/test-utils/: Cargo.toml
clickhouse-admin/tests/: integration_test.rs
clickhouse-admin/types/: Cargo.toml
cockroach-admin/: Cargo.toml
cockroach-admin/api/: Cargo.toml
cockroach-admin/proptest-regressions/: cockroach_cli.txt
cockroach-admin/src/: cockroach_cli.rs  context.rs  http_entrypoints.rs  lib.rs
cockroach-admin/tests/: mod.rs
cockroach-admin/types/: Cargo.toml
cockroach-metrics/: Cargo.toml
cockroach-metrics/src/: lib.rs
common/: Cargo.toml  build.rs
common/examples/: backoff-print.rs
common/src/: address.rs  backoff.rs  cmd.rs  config.rs  disk.rs  http_client.rs  ledger.rs  lib.rs  limits.rs  nexus_client.rs  nexus_config.rs  oximeter_client.rs  packaging.rs  policy.rs  postgres_config.rs  progenitor_operation_retry.rs  resolvable_files.rs  sled_agent_client.rs  snake_case_option_result.rs  snake_case_result.rs  typed_uuid.rs  update.rs  vlan.rs  zone_images.rs  zpool_name.rs
crdb-seed/: Cargo.toml
crdb-seed/src/: main.rs
ddm-admin-client/: Cargo.toml  build.rs
ddm-admin-client/src/: lib.rs
deploy/: Cargo.toml  README.adoc
dev-tools/: Cargo.toml
dev-tools/cert-dev/: Cargo.toml
dev-tools/ch-dev/: Cargo.toml
dev-tools/ci-resource-usage/: Cargo.toml
dev-tools/clickana/: Cargo.toml
dev-tools/clickhouse-cluster-dev/: Cargo.toml
dev-tools/common/: Cargo.toml
dev-tools/corpus-adjust/: Cargo.toml
dev-tools/crdb-seed/: Cargo.toml  README.md
dev-tools/db-dev/: Cargo.toml
dev-tools/downloader/: Cargo.toml
dev-tools/dropshot-apis/: Cargo.toml
dev-tools/hist/: Cargo.toml
dev-tools/ipcc-rot/: Cargo.toml
dev-tools/ls-apis/: Cargo.toml  README.adoc  api-manifest.toml
dev-tools/ls-apis-shared/: Cargo.toml
dev-tools/measurement-diagnose/: Cargo.toml
dev-tools/mgs-dev/: Cargo.toml
dev-tools/omdb/: Cargo.toml  build.rs
dev-tools/omicron-deployment-graph/: Cargo.toml
dev-tools/omicron-dev/: Cargo.toml
dev-tools/omicron-dev-lib/: Cargo.toml
dev-tools/openapi-manager/: Cargo.toml  README.adoc
dev-tools/oximeter-load-test/: Cargo.toml
dev-tools/oxlog/: Cargo.toml
dev-tools/pins/: Cargo.toml
dev-tools/reconfigurator/: Cargo.toml
dev-tools/reconfigurator-cli/: Cargo.toml
dev-tools/reconfigurator-exec/: Cargo.toml
dev-tools/reconfigurator-exec-unsafe/: Cargo.toml
dev-tools/reconfigurator-sp-updater/: Cargo.toml
dev-tools/releng/: Cargo.toml
dev-tools/repl-utils/: Cargo.toml
dev-tools/repo-depot-standalone/: Cargo.toml
dev-tools/schema/: Cargo.toml
dev-tools/support-bundle-reader-lib/: Cargo.toml
dev-tools/tests/: test_omicron_dev.rs
dev-tools/thing-flinger/: Cargo.toml
dev-tools/xtask/: Cargo.toml
dns-server/: Cargo.toml  build.rs
dns-server-api/: Cargo.toml
dns-server-api/src/: lib.rs
dns-server/dnsadm/: Cargo.toml
dns-server/examples/: config.toml
dns-server/src/: authority.rs  dns_data.rs  dns_server.rs  dns_types.rs  http_server.rs  lib.rs  storage.rs
dns-server/tests/: basic_test.rs  commands_test.rs  cross_version_test.rs  openapi_test.rs
dns-server/transient/: Cargo.toml
dns-service-client/: Cargo.toml
dns-service-client/src/: lib.rs  multiclient.rs  names.rs
dpd-client/: Cargo.toml  build.rs  dpd.json
dpd-client/src/: lib.rs
end-to-end-tests/: Cargo.toml  README.adoc
end-to-end-tests/src/: external_dns.rs  instance_launch.rs  lib.rs  no_spoof.rs  noop_blueprint.rs
ereporter/: Cargo.toml
ereporter/api/: Cargo.toml
ereporter/src/: buffer.rs  lib.rs  proxy.rs  registry.rs  server.rs
ereporter/test-utils/: Cargo.toml
ereporter/tester-ingester/: Cargo.toml
ereporter/types/: Cargo.toml
gateway/: Cargo.toml  README.adoc
gateway-api/: Cargo.toml
gateway-api/src/: lib.rs
gateway-cli/: Cargo.toml
gateway-cli/src/: main.rs  picocom_map.rs  usart.rs
gateway-client/: Cargo.toml
gateway-client/src/: lib.rs
gateway-messages/: Cargo.toml
gateway-messages/src/: lib.rs  sp_impl.rs  variable_packet.rs
gateway-sp-comms/: Cargo.toml  README.md
gateway-sp-comms/src/: communicator.rs  error.rs  hubris_archive.rs  lib.rs  management_switch.rs  single_sp.rs
gateway-test-utils/: Cargo.toml
gateway-test-utils/configs/: config.test.toml  sp_sim_config.test.toml  sp_sim_config_cabooses.test.toml
gateway-test-utils/src/: lib.rs  setup.rs  sim_state.rs
gateway-types/: Cargo.toml
gateway-types/migrations/: Cargo.toml
gateway-types/src/: caboose.rs  component.rs  component_details.rs  error.rs  host.rs  ignition.rs  lib.rs  rot.rs  sensor.rs  task_dump.rs  update.rs
gateway-types/versions/: Cargo.toml
git-version/: Cargo.toml  build.rs
id-map/: Cargo.toml
illumos-utils/: Cargo.toml  build.rs
installinator-api/: Cargo.toml
(+7769 files in other folders)
